--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
     <main>
       <h1>Tic Tac Toe - Charishma Pothireddy</h1>
+      <p id="para"></p>
       <div class="container">
         <div class="game">
           <button class="box"></button>
